# 2dTopDownGangWars

./: .gitignore  Cargo.toml  README.md
docs/00-vision/: pitch.md
docs/01-game-design/: gdd.md
docs/02-technical-design/: tdd.md
docs/03-roadmap/: roadmap.md
docs/04-agent-delegation/: matrix.md
docs/09-decisions/: ADR-001-engine-choice.md  ADR-002-ecs-choice.md  ADR-003-data-format.md
docs/10-changelog/: sprint-01.md  sprint-02.md  sprint-03.md  sprint-04.md  sprint-05.md  sprint-06.md  sprint-07.md  sprint-08.md  sprint-09.md  sprint-10.md  sprint-11.md  sprint-12.md  sprint-13.md
docs/11-release/: how-to-play.md  release-notes.md
engine/: Cargo.toml
engine/shaders/: sprite.wgsl
engine/src/: app.rs  assets.rs  debug.rs  ecs.rs  input.rs  lib.rs  math.rs  render.rs  time.rs
game/: Cargo.toml
game/src/: font.rs  main.rs  text.rs
game/src/audio/: mod.rs
game/src/businesses/: mod.rs
game/src/combat/: mod.rs
game/src/crew/: mod.rs
game/src/dialog/: mod.rs
game/src/director/: mod.rs
game/src/economy/: mod.rs
game/src/events/: mod.rs
game/src/factions/: faction_ai.rs  faction_def.rs  influence.rs  mod.rs  reputation.rs
game/src/heists/: mod.rs
game/src/missions/: mod.rs
game/src/news/: mod.rs
game/src/police/: evidence.rs  heat.rs  mod.rs  police_ai.rs
game/src/rivals/: mod.rs
game/src/safehouses/: mod.rs
game/src/save/: mod.rs
game/src/sprites/: mod.rs
game/src/systems/: mod.rs  spatial.rs  world_time.rs
game/src/ui/: mod.rs
game/src/world/: collision.rs  dialog.rs  mod.rs  npc.rs  npc_fsm.rs  tilemap.rs  tiles.rs  vehicle.rs  zone.rs
tools/: cargo.bat  msvc-env.bat
